--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,12 +28,10 @@ jobs:
           ~/.vvm
         key: compiler-cache
 
-    - name: Setup nvm
-      run: nvm install 16.3.2
-
     - name: Setup Node.js
       uses: actions/setup-node@v2
-
+      with:
+        node-version: 16.3.2
 
     - name: Install Ganache
       run: npm install -g ganache-cli@6.12.1
